--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Niel Joseph R. Roma">
     <meta name="keywords" content="Niel Roma,Niel Joseph R. Roma,Niel Joseph Roma">
     <meta name="description" content=" Welcome to my Portfolio Website, Here you can see my personality and quality of my work. ">
-    <title>Portfolio Website</title>
+    <title>Kreme Pro</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
