--- a/index.html
+++ b/index.html
@@ -1,26 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Niel Joseph R. Roma">
-    <meta name="keywords" content="Niel Roma,Niel Joseph R. Roma,Niel Joseph Roma">
-    <meta name="description" content=" Welcome to my Portfolio Website, Here you can see my personality and quality of my work. ">
-    <title>Kreme Pro</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" type="text/css" media="screen"/>
+    <title>Conference</title>
 </head>
 <body>
-    <header class="header">
-        <a href="#" class="logo">Niel</a>
-       
-        <nav class="navbar">
-            <a href="" class="active">Home</a>
-            <a href="">About</a>
-            <a href="">Service</a>
-            <a href="">Contact</a>
-            <a href="">Portfolio</a>
-        </nav>
+    <header>
+        <h1>&lt; / &gt; Guild : Conference</h1>
+        <ul>
+            <li><a href="index">Home</a></li>
+            <li><a href="Speaker">Speaker</a></li>
+            <li><a href="Schedule">Schedule</a></li>
+            <li><a href="Venue">Venue</a></li>
+            <li><a href="Register">Register</a></li>
+        </ul>
     </header>
+    <h6 id="Top">April 26-27 , Bacolod City SM Convention Hall</h6>
+    <section class="sec1">
+        <h1>CodersGuild : Zoom Conference</h1>   
+        <p>An Online Coding Bootcamp. The SDTP modules will provice trainess with all the essentials</p>
+        <p> skill currently required by the software industry for a Junior Developer job.</p>
+    </section>
+    <div class="button">
+        <form action="Register.html">
+        <label for="Registeration"></label>
+        <input type="submit"  value="Register Now!" name="register" id="regID">
+    </form>
+    </div>
+    <section class="sec2">
+        <img src="./img/powell.png" alt="Kevin Powell"/>
+        <article>
+            
+            <p><H2 class="adjust1">Kevin Powell -  a CSS Evangelist</H2></p>
+            <p> - Lead Speaker</p>
+            <p>Hi, I'm Kevin. I teach people how to make the web and how to make it look good while they're at it.</p>
+            <p>I learned to make websites on my own. I know how fun and rewarding it is, but I also know that</p>
+            <p>that it can be incredibly frustrating. I'm here to help make your journey into web development</p>
+            <p>as easy and as fun as possible.</p>
+        </article> 
+    </section>
+    <section class="sec3">
+        <table width="80%" height="10%">
+            <tr height="10%">
+                <th class="adjust2" >Conference</th>
+                <th class="adjust2">Workshop</th>
+            </tr>
+            <tr height="10%">
+                <td class="adjust2" >Day1</td>
+                <td class="adjust2">Day 2-3</td>
+            </tr>
+            <tr height="20%">
+                <td><img src="./img/speaker.png" alt="speaker" width="100px" height="100px"></td>
+                <td><img src="./img/workshop.png" alt="training" width="100px" height="100px"></td>
+            </tr>
+            <tr height="10%" width="50px">
+                <td class="adjust2" >
+                    <p>Fresh first day and action-packed day of tails,</p>
+                    <p>gathering and all-around good times.</p></td>
+                <td class="adjust2">
+                    <p>Zero to Pro. Trainings fundamentals, structures</p> 
+                    <p>and responsive layouts.</p></td>
+            </tr>
+        </table>
+    </section>
+    <footer>
+        <h4><a href="#Top">@CodersGuild Conference</a></h4>
+        <ul>
+            <li><a href="index">Home</a></li>
+            <li><a href="Speaker">Speaker</a></li>
+            <li><a href="Schedule">Schedule</a></li>
+            <li><a href="Venue">Venue</a></li>
+            <li><a href="Register">Register</a></li>
+        </ul>
+        </footer>
 </body>
 </html>
