--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p> skill currently required by the software industry for a Junior Developer job.</p>
     </section>
     <div class="button">
-        <form action="Register.html">
+        <form action="Register">
         <label for="Registeration"></label>
         <input type="submit"  value="Register Now!" name="register" id="regID">
     </form>
